feat: add Google sign in token and sign out routes on server
