# api/src/controller/http/auth/response/auth.v1.response.ts
@@ -1,1 +1,5 @@
 export interface GoogleSignInV1Response {}
+
+export interface GoogleSignInTokenV1Response {}
+
+export interface SignOutV1Response {}
